--- a/adaptive.css
+++ b/adaptive.css
@@ -6,6 +6,12 @@
     width: 120%;
     margin-left: -10%;
   }
+  .Yellow_block{
+    opacity: 0;
+  }
+  .Yellow_block__adaptive{
+    opacity: 1;
+  }
   .Yellow_block__contain{
     margin-left: 20px;
     display: flex;
@@ -50,11 +56,20 @@
     width: 140%;
   }
   .Yellow_block{
-    width: 250px;
+    opacity: 0;
+  }
+  .Yellow_block__adaptive{
+    opacity: 1;
+  }
+  .Yellow_block__contain{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
   .Yellow_block__text{
-    width: 120px;
     margin: 10px 10px;
+    font-size: 30px;
   }
   .text__container{
     margin: 60px 60px;
@@ -120,8 +135,10 @@
     align-items: center;
   }
   .Yellow_block{
-    width: 230px;
-    padding: 5px 10px;
+    opacity: 0;
+  }
+  .Yellow_block__adaptive{
+    opacity: 1;
   }
   .text__container{
     margin: 40px 40px;
@@ -172,16 +189,36 @@
   }
 }
 
-@media (max-width: 400px){
+@media (max-width: 420px){
   .wrapper{
     overflow: hidden;
   }
+  .Yellow_block{
+    opacity: 0;
+  }
+  .Yellow_block__adaptive{
+    opacity: 1;
+    padding: 5px;
+    width: 70%;
+    margin-left: 15%;
+  }
+  .Yellow_block__text{
+    font-size: 24px;
+  }
   .main__bkg{
-    width: 250%;
+    width: 350%;
     margin-left: -75%;
   }
   .main__screen{
     width: 100%;
   }
-  
+  .photo__items__right{
+    width: 320px;
+  }
+  .photo__items{
+    width: 320px;
+  }
+  .photo__box{
+    margin: 10px;
+  }
 }
